--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
-  "homepage": "https://TransFormes.github.io/vueAdmin/",
+  "homepage": "https://TransFormes.github.io/vueAdmin",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
