--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
 
     - name: buildAndDeploy
       uses: JamesIves/github-pages-deploy-action@4.1.4
-      with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: build
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 使用刚新建的secret
         BRANCH: gh-pages # 存放产物的分支名称
         FOLDER: dist # 存放build后产物的目录
         BUILD_SCRIPT: npm install && npm run build # 执行的命令
+      with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: dist
