--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,85 @@
-name: buildAndDeploy
+# name: buildAndDeploy
+# on:
+#   push
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest # 我们选择使用最新的ubuntu系统
+#     steps:
+#     - name: checkout
+#       uses: actions/checkout@main # 将代码拷贝到虚机中
+#       with:
+#         persist-credentials: false
+#     - name: setup-node
+#       uses: actions/setup-node@v2
+#       with:
+#         node-version: '14'
+#     - name: Install and Build 
+#         run: |
+#           npm install
+#           npm run build
+#     - name: buildAndDeploy
+#       uses: JamesIves/github-pages-deploy-action@4.1.4
+#       env:
+#         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 使用刚新建的secret
+#         BRANCH: gh-pages # 存放产物的分支名称
+#         FOLDER: dist # 存放build后产物的目录
+#         BUILD_SCRIPT: npm install && npm run build # 执行的命令
+#       with:
+#           branch: gh-pages # The branch the action should deploy to.
+#           folder: dist
+
+name: docs
+
 on:
-  push
+  # 每当 push 到 main 分支时触发部署
+  push:
+    branches: [main]
+  # 手动触发部署
+  workflow_dispatch:
+
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest # 我们选择使用最新的ubuntu系统
+  docs:
+    runs-on: ubuntu-latest
+
     steps:
-    - name: checkout
-      uses: actions/checkout@main # 将代码拷贝到虚机中
-      with:
-        persist-credentials: false
-    - name: setup-node
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - name: Install and Build 
-        run: |
-          npm install
-          npm run build
-    - name: buildAndDeploy
-      uses: JamesIves/github-pages-deploy-action@4.1.4
-      env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 使用刚新建的secret
-        BRANCH: gh-pages # 存放产物的分支名称
-        FOLDER: dist # 存放build后产物的目录
-        BUILD_SCRIPT: npm install && npm run build # 执行的命令
-      with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: dist
+      - uses: actions/checkout@v2
+        with:
+          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          # 选择要使用的 node 版本
+          node-version: "14"
+
+      # 缓存 node_modules
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      # 如果缓存没有命中，安装依赖
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn
+
+      # 运行构建脚本
+      - name: Build VuePress site
+        run: yarn build
+
+      # 查看 workflow 的文档来获取更多信息
+      # @see https://github.com/crazy-max/ghaction-github-pages
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          # 部署到 gh-pages 分支
+          BRANCH: gh-pages
+          # 部署目录为 VuePress 的默认输出目录
+          FOLDER: dist
