change vue module

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ on:
   # 每当 push 到 main 分支时触发部署
   push:
     branches: [main]
+    paths-ignore: # 下列文件的变更不触发部署，可以自行添加
+      - README.md
+      - LICENSE
   # 手动触发部署
   workflow_dispatch:
 
